# master_lectures_csp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  __init__.py  cmake_install.cmake  course_optimizer.py  lecture.py  main.cpp  master_csp_cpp  master_csp_cpp.cbp  print_out_helper.txt  tum_lectures.xlsx
helpers/: constraint.cpp  constraint.hpp  lecture.hpp
